--- a/package.json
+++ b/package.json
@@ -3,10 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js",
+    "dbcreate": "npx sequelize db:create",
+    "dbdrop": "npx sequelize db:drop",
+    "migall": "npx sequelize db:migrate",
+    "miguna": "npx sequelize db:migrate:undo:all",
+    "seedall": "npx sequelize db:seed:all",
+    "seeduna": "npx sequelize db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
+  }
 }
