--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     "mig": "npx sequelize db:migrate",
     "miguna": "npx sequelize db:migrate:undo:all",
     "seedall": "npx sequelize db:seed:all",
-    "seeduna": "npx sequelize db:seed:undo:all"
+    "seeduna": "npx sequelize db:seed:undo:all",
+    "initial": "npm run dbdrop && npm run dbcreate && npm run mig && npm run seedall"
   },
   "keywords": [],
-  "author": "",
+  "author": "AlexS",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
