--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "miguna": "npx sequelize db:migrate:undo:all",
     "seedall": "npx sequelize db:seed:all",
     "seeduna": "npx sequelize db:seed:undo:all",
-    "initial": "npm run dbdrop && npm run dbcreate && npm run mig && npm run seedall"
+    "initial": "npm run seeduna && npm run miguna && npm run dbdrop && npm run dbcreate && npm run mig && npm run seedall && npm start"
   },
   "keywords": [],
   "author": "AlexS",
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
